--- a/test.html
+++ b/test.html
@@ -631,7 +631,7 @@
                     <a href="#" class="learn-more-btn">Learn More About Our Mission</a>
                 </div>
                 <div class="about-image">
-                    <img src="/content/images/Screenshot 2025-08-01 215323.png" alt="About Us">
+                    <img src="/content/images/teamBio.jpeg" alt="About Us">
                 </div>
             </div>
         </div>
