--- a/services.html
+++ b/services.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Services - Your NGO Name</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <style>
         * {
             margin: 0;
@@ -14,8 +14,8 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #ffffff;
-            color: #1a1a1a;
+            background-color: #fafafa;
+            color: #1f2937;
             line-height: 1.6;
         }
 
@@ -27,37 +27,39 @@
             background: #ffffff;
             z-index: 1000;
             padding: 1rem 0;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-            transition: all 0.3s ease;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06);
+            transition: box-shadow 0.3s ease;
         }
 
         nav {
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 2.5rem;
+            gap: 2rem;
             max-width: 1200px;
             margin: 0 auto;
-            padding: 0 2rem;
+            padding: 0 1.5rem;
         }
 
         nav a {
-            color: #333;
+            color: #4b5563;
             text-decoration: none;
-            font-weight: 500;
-            font-size: 0.95rem;
+            font-weight: 600;
+            font-size: 1rem;
             position: relative;
-            transition: color 0.3s ease;
+            padding: 0.4rem 0;
+            transition: color 0.25s ease;
         }
 
         nav a::after {
             content: '';
             position: absolute;
-            bottom: -5px;
+            bottom: 0;
             left: 0;
             width: 0;
             height: 2px;
             background: #2563eb;
+            border-radius: 1px;
             transition: width 0.3s ease;
         }
 
@@ -69,19 +71,20 @@
             width: 100%;
         }
 
-        /* Section Styling */
+        /* Main Content */
         .section {
-            padding: 5rem 2rem;
+            padding: 6rem 1.5rem 4rem;
             max-width: 1200px;
-            margin: 80px auto 0; /* Add top margin to account for fixed header */
+            margin: 0 auto;
         }
 
         .section h2 {
             text-align: center;
-            margin-bottom: 3rem;
-            font-size: 2.5rem;
+            margin-bottom: 2.5rem;
+            font-size: 2.25rem;
             font-weight: 700;
-            color: #1a1a1a;
+            color: #111827;
+            position: relative;
         }
 
         .section h2::after {
@@ -97,131 +100,143 @@
         /* Services Grid */
         .services-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-            gap: 2.5rem;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
         }
 
         /* Service Card */
         .service-card {
             background: white;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+            border-radius: 16px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
             padding: 2rem;
             text-align: center;
-            transition: all 0.3s ease;
-            border: 1px solid #e5e7eb;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            border: 1px solid #f3f4f6;
         }
 
         .service-card:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.12);
+            transform: translateY(-6px);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
         }
 
         .service-card img {
-            width: 80px;
-            height: 80px;
-            object-fit: contain; /* Ensure icon fits nicely */
-            margin: 0 auto 1.5rem; /* Center icon */
+            width: 72px;
+            height: 72px;
+            object-fit: contain;
+            margin: 0 auto 1.25rem;
             display: block;
-            filter: drop-shadow(0 4px 6px rgba(37, 99, 235, 0.1)); /* Subtle shadow */
+            filter: drop-shadow(0 2px 4px rgba(37, 99, 235, 0.15));
         }
 
         .service-card h3 {
-            color: #1a1a1a;
-            margin-top: 0;
-            margin-bottom: 1rem;
-            font-size: 1.5rem;
+            color: #111827;
+            margin: 0 0 1rem;
+            font-size: 1.375rem;
             font-weight: 600;
         }
 
-        .service-card .service-body {
-            color: #6b7280;
+        .service-body {
+            color: #4b5563;
+            text-align: left;
+            font-size: 0.95rem;
+        }
+
+        .service-body h1,
+        .service-body h2,
+        .service-body h3 {
+            color: #111827;
+            margin: 1.25rem 0 0.75rem;
+            font-size: 1.125rem;
+            font-weight: 600;
+        }
+
+        .service-body p {
+            margin-bottom: 1rem;
             line-height: 1.7;
-            text-align: left; /* Align description text to the left */
         }
 
-        .service-card .service-body h1, .service-card .service-body h2, .service-card .service-body h3 {
-            color: #1a1a1a;
-            margin-top: 1.25rem;
-            margin-bottom: 0.75rem;
-            font-size: 1.25rem;
-            font-weight: 600;
-            text-align: left; /* Ensure headings inside body are left-aligned */
-        }
-        .service-card .service-body p {
-            margin-bottom: 1rem;
-            text-align: left; /* Ensure paragraphs inside body are left-aligned */
-        }
-        .service-card .service-body a {
+        .service-body a {
             color: #2563eb;
+            text-decoration: none;
+            font-weight: 500;
+        }
+
+        .service-body a:hover {
             text-decoration: underline;
+            color: #1d4ed8;
         }
-        .service-card .service-body a:hover {
-            color: #1e40af;
-        }
-        .service-card .service-body ul, .service-card .service-body ol {
-            margin-left: 1rem;
+
+        .service-body ul,
+        .service-body ol {
+            margin-left: 1.25rem;
             margin-bottom: 1rem;
-            text-align: left; /* Ensure lists inside body are left-aligned */
+            padding-left: 0.5rem;
         }
-        .service-card .service-body li {
+
+        .service-body li {
             margin-bottom: 0.5rem;
+            line-height: 1.6;
         }
 
         /* Footer */
         footer {
-            background: #1a1a1a;
+            background: #111827;
             color: #9ca3af;
             text-align: center;
-            padding: 2.5rem 2rem;
-            margin-top: 4rem; /* Add top margin */
+            padding: 2rem 1.5rem;
+            margin-top: 4rem;
         }
 
         footer p {
-            font-size: 0.9rem;
+            font-size: 0.95rem;
+            line-height: 1.6;
         }
 
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            nav {
-                flex-wrap: wrap;
-                gap: 1rem;
-                justify-content: center;
-            }
-
-            .section {
-                padding: 3rem 1.5rem;
-            }
-
-            .section h2 {
-                font-size: 2rem;
-            }
-
-            .services-grid {
-                grid-template-columns: 1fr; /* Single column on mobile */
-            }
-        }
-
-        /* Loading Animation */
-        .loading {
+        /* Loading & Error States */
+        .loading,
+        .error {
             text-align: center;
-            padding: 3rem 2rem;
+            padding: 3rem 1.5rem;
             color: #6b7280;
+            grid-column: 1 / -1;
         }
 
         .spinner {
             border: 3px solid #e5e7eb;
             border-top: 3px solid #2563eb;
             border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            animation: spin 0.8s linear infinite;
+            width: 36px;
+            height: 36px;
+            animation: spin 0.9s linear infinite;
             margin: 0 auto 1rem;
         }
 
         @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            nav {
+                gap: 1.25rem;
+                flex-wrap: wrap;
+            }
+
+            .section {
+                padding: 5rem 1.25rem 3rem;
+            }
+
+            .section h2 {
+                font-size: 1.875rem;
+            }
+
+            .services-grid {
+                grid-template-columns: 1fr;
+                gap: 1.75rem;
+            }
         }
     </style>
 </head>
@@ -236,23 +251,23 @@
         </nav>
     </header>
 
-    <div class="section">
-        <h2>Our Services</h2>
-        <div id="services-container" class="services-grid">
-            <!-- Services will be loaded here -->
-            <div class="loading">
-                <div class="spinner"></div>
-                <p>Loading services...</p>
+    <main>
+        <div class="section">
+            <h2>Our Services</h2>
+            <div id="services-container" class="services-grid">
+                <div class="loading">
+                    <div class="spinner"></div>
+                    <p>Loading services...</p>
+                </div>
             </div>
         </div>
-    </div>
+    </main>
 
     <footer>
-        <p>&copy; 2024 Your NGO Name. All rights reserved.</p>
+        <p>&copy; 2025 Your NGO Name. All rights reserved.</p>
     </footer>
 
     <script>
-        // --- Helper Functions (same as index.html) ---
         function parseYAML(yamlStr) {
             const result = {};
             const lines = yamlStr.trim().split('\n');
@@ -273,23 +288,39 @@
         }
 
         function simpleMarkdownToHTML(md) {
-            let html = md;
-            html = html.replace(/^(\s*)## (.+)$/gm, '$1<h2>$2</h2>');
-            html = html.replace(/^(\s*)# (.+)$/gm, '$1<h1>$2</h1>');
-            html = html.replace(/^(\s*)### (.+)$/gm, '$1<h3>$2</h3>');
-            html = html.replace(/\*\*(.+?)\*\*/g, '<strong>$1</strong>');
-            html = html.replace(/\*(.+?)\*/g, '<em>$1</em>');
-            html = html.replace(/\[([^\]]+)\]\(([^)]+)\)/g, '<a href="$2" target="_blank">$1</a>');
-            html = html.replace(/^- (.+)$/gm, '<li>$1</li>');
-            html = html.replace(/(<li>.+<\/li>)+/g, '<ul>$&</ul>');
-            html = html.replace(/\n/g, '<br>');
-            const paragraphs = html.split('<br><br>');
-            html = paragraphs.map(p => `<p>${p}</p>`).join('');
-            html = html.replace(/<br><br>/g, '<br>');
+            let html = md.trim();
+
+            // Headings
+            html = html.replace(/^### (.*$)/gm, '<h3>$1</h3>');
+            html = html.replace(/^## (.*$)/gm, '<h2>$1</h2>');
+            html = html.replace(/^# (.*$)/gm, '<h1>$1</h1>');
+
+            // Bold & Italic
+            html = html.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
+            html = html.replace(/\*(.*?)\*/g, '<em>$1</em>');
+
+            // Links
+            html = html.replace(/\[([^\]]+)\]\(([^)]+)\)/g, '<a href="$2" target="_blank" rel="noopener">$1</a>');
+
+            // Lists
+            html = html.replace(/^-\s+(.*$)/gm, '<li>$1</li>');
+            html = html.replace(/(<li>.*<\/li>+)/g, '<ul>$1</ul>');
+
+            // Paragraphs
+            html = html
+                .split('\n\n')
+                .map(p => p.trim())
+                .filter(p => p)
+                .map(p => `<p>${p}</p>`)
+                .join('');
+
+            // Fix nested tags inside paragraphs (basic cleanup)
+            html = html.replace(/<\/?p>\s*<(ul|ol|h[1-3]|strong|em|a)/g, '<$1');
+            html = html.replace(/(ul|ol|h[1-3]|strong|em|a)>\s*<\/p>/g, '$1>');
+
             return html;
         }
 
-        // --- Services Loading Logic ---
         async function loadServices() {
             try {
                 const indexResponse = await fetch('/content/index.json');
@@ -311,18 +342,24 @@
 
                         serviceCards.push(`
                             <div class="service-card">
-                                <img src="${meta.image}" alt="${meta.title}" loading="lazy">
+                                <img src="${meta.image || '/assets/default-icon.svg'}" alt="${meta.title}" loading="lazy">
                                 <h3>${meta.title}</h3>
                                 <div class="service-body">${htmlBody}</div>
                             </div>
                         `);
                     }
                 }
-                document.getElementById('services-container').innerHTML = serviceCards.join('');
+
+                if (serviceCards.length === 0) {
+                    document.getElementById('services-container').innerHTML = '<div class="error"><p>No services found.</p></div>';
+                } else {
+                    document.getElementById('services-container').innerHTML = serviceCards.join('');
+                }
 
             } catch (error) {
                 console.error('Error loading services:', error);
-                document.getElementById('services-container').innerHTML = '<p>Error loading services. Please try again later.</p>';
+                document.getElementById('services-container').innerHTML = 
+                    '<div class="error"><p>Failed to load services. Please try again later.</p></div>';
             }
         }
 
