--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="BioNova – Empowering sustainable community development through innovative, evidence-based solutions for global resilience." />
     <meta name="keywords" content="sustainable development, NGO, community empowerment, global impact, BioNova, nonprofit" />
     <meta name="author" content="BioNova International" />
-    <meta name="theme-color" content="#0d9488" />
+    <meta name="theme-color" content="#f97316" />
     <meta property="og:title" content="BioNova | Sustainable Community Development" />
     <meta property="og:description" content="Join us in building resilient futures through local partnerships and global expertise." />
     <meta property="og:type" content="website" />
@@ -17,7 +17,7 @@
 
     <title>BioNova | Sustainable Community Development</title>
 
-    <!-- Fonts: Inter for body, Playfair for headings (trending elegant serif for NGOs) -->
+    <!-- Fonts: Inter for body, Playfair for headings -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@700;800;900&display=swap" rel="stylesheet" />
@@ -30,11 +30,11 @@
 
     <style>
         :root {
-            /* Colors: Sustainable earth tones for trust & impact */
-            --color-primary: #0d9488;
-            --color-primary-dark: #0a6c64;
+            /* Colors: Updated — primary is now ORANGE */
+            --color-primary: #f97316;            /* Orange (was #0d9488 green) */
+            --color-primary-dark: #ea580c;       /* Darker orange (was #0a6c64) */
             --color-accent: #f97316;
-            --color-accent-dark: #ea580c;
+            --color-accent-dark: #c2410c;        /* Deeper orange for hover */
             --color-text: #1e293b;
             --color-text-light: #64748b;
             --color-text-inverse: #f8fafc;
@@ -195,7 +195,7 @@
             grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
         }
 
-        /* Header - Fixed with solid background */
+        /* Header */
         .header {
             position: fixed;
             top: 0;
@@ -270,7 +270,7 @@
             content: '';
             position: absolute;
             inset: 0;
-            background: radial-gradient(circle at 20% 80%, rgba(13, 148, 136, 0.2), transparent 50%);
+            background: radial-gradient(circle at 20% 80%, rgba(249, 115, 22, 0.2), transparent 50%);
             z-index: 0;
         }
 
@@ -320,7 +320,6 @@
         /* Section Base */
         .section {
             padding: var(--space-20) 0;
-            position: relative;
         }
 
         .section.alt-bg {
@@ -405,7 +404,7 @@
             transition: transform var(--transition-slow);
         }
 
-        /* Articles Preview - Fixed image sizing */
+        /* Articles */
         .articles-preview {
             display: grid;
             gap: var(--space-8);
@@ -502,7 +501,7 @@
             transform: translateX(4px);
         }
 
-        /* Team Preview - Fixed image sizing */
+        /* Team */
         .team-preview {
             display: grid;
             gap: var(--space-8);
@@ -575,7 +574,7 @@
 
         /* Stats */
         .stats-section {
-            background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-primary-dark) 100%);
+            background: linear-gradient(135deg, var(--color-primary), var(--color-primary-dark));
             color: var(--color-text-inverse);
             padding: var(--space-24) 0;
             text-align: center;
@@ -640,16 +639,18 @@
             transform: translateY(-2px);
         }
 
+        /* ✅ FIXED FOOTER */
         footer {
-            background: var(--color-text);
-            color: #cbd5e1;
+            background: var(--color-primary-dark);
+            color: var(--color-text-inverse);
             text-align: center;
             padding: var(--space-12) 0;
             font-size: var(--font-size-sm);
         }
 
         footer p {
-            color: #cbd5e1;
+            color: var(--color-text-inverse);
+            opacity: 0.9;
         }
 
         /* Loading */
@@ -662,7 +663,7 @@
         .spinner {
             width: 48px;
             height: 48px;
-            border: 4px solid rgba(13, 148, 136, 0.2);
+            border: 4px solid rgba(249, 115, 22, 0.2);
             border-top: 4px solid var(--color-primary);
             border-radius: 50%;
             animation: spin 1s linear infinite;
@@ -864,7 +865,7 @@
         </div>
     </footer>
 
-    <!-- YOUR EXACT SCRIPT – UNTOUCHED -->
+    <!-- Script unchanged -->
     <script>
         // Utility function for parsing YAML frontmatter
         function parseYAML(yamlStr) {
@@ -887,7 +888,7 @@
         }
 
         // Function to convert markdown to HTML (simplified)
-       function simpleMarkdownToHTML(md) {
+        function simpleMarkdownToHTML(md) {
             let html = md;
             html = html.replace(/^(\s*)## (.+)$/gm, '$1<h2>$2</h2>');
             html = html.replace(/^(\s*)# (.+)$/gm, '$1<h1>$2</h1>');
