--- a/team.html
+++ b/team.html
@@ -550,8 +550,8 @@
                 <div class="stat-label">Years Experience</div>
             </div>
             <div class="stat-item">
-                <div class="stat-number">North America</div>
-                <div class="stat-label">Franchise Network</div>
+                <div class="stat-number">Bangladesh</div>
+                <div class="stat-label">location</div>
             </div>
         </div>
 
