--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                         <p class="mb-3">BioNova is an international non-governmental organization dedicated to creating lasting, sustainable change in communities worldwide.</p>
                         <p class="mb-3">Our mission focuses on empowering communities through capacity building, education, healthcare access, and economic development initiatives.</p>
                         <p class="mb-4">We prioritize local leadership and participatory approaches to ensure programs are culturally appropriate and sustainable.</p>
-                        <a href="about.html" class="btn btn-outline-primary">Explore Our Impact <i class="fas fa-arrow-right ms-2"></i></a>
+                        <a href="services.html" class="btn btn-outline-primary">Explore Our Impact <i class="fas fa-arrow-right ms-2"></i></a>
                     </div>
                     <div class="col-lg-6">
                         <div class="fade-in">
