--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                         <h1 id="hero-heading" class="display-4 fw-bold mb-4">Sustainable Solutions for Global Challenges</h1>
                         <p class="lead mb-4">Empowering communities through innovative development programs and strategic partnerships</p>
                         <button class="btn btn-primary btn-lg me-2" onclick="window.location.href='contact.html'">Join Our Mission</button>
-                        <button class="btn btn-outline-light btn-lg" onclick="window.location.href='about.html'">Learn More</button>
+                        <button class="btn btn-outline-light btn-lg" onclick="window.location.href='services.html'">Learn More</button>
                     </div>
                 </div>
             </div>
