--- a/team.html
+++ b/team.html
@@ -78,6 +78,11 @@
             border-color: black;
             color: white;
         }
+
+        /* Minimal addition to fix image inconsistency */
+        .object-fit-cover {
+            object-fit: cover;
+        }
     </style>
 </head>
 <body>
@@ -215,7 +220,7 @@
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Your Original Script - Completely Unchanged -->
+    <!-- Your Original Script - Completely Unchanged except image rendering (see below) -->
     <script>
         // Scroll effect for header
         window.addEventListener('scroll', () => {
@@ -365,9 +370,10 @@
                 return `
                     <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow-sm">
-                            <div class="card-img-top overflow-hidden">
+                            <div class="ratio ratio-1x1">
                                 <img src="${m.meta.image || 'https://via.placeholder.com/300x300/E9ECEF/495057?text=Photo'}" 
-                                     class="card-img-top" alt="${m.meta.title}" loading="lazy">
+                                     class="card-img-top object-fit-cover" 
+                                     alt="${m.meta.title}" loading="lazy">
                             </div>
                             <div class="card-body text-center d-flex flex-column">
                                 <h5 class="card-title">${m.meta.title}</h5>
