--- a/team.html
+++ b/team.html
@@ -79,9 +79,30 @@
             color: white;
         }
 
-        /* Minimal addition to fix image inconsistency */
+        /* Ensure image covers container */
         .object-fit-cover {
             object-fit: cover;
+        }
+
+        /* Hero Section with Background Image */
+        .hero-section {
+            background-image: url('content/images/tester.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 400px;
+        }
+
+        /* Search bar styling */
+        .search-container {
+            position: relative;
+            max-width: 400px;
+            margin: 0 auto;
+        }
+
+        .search-input {
+            padding-left: 45px;
+            border-radius: 25px;
         }
     </style>
 </head>
@@ -116,36 +137,10 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="pt-5 mt-5 pb-5 bg-light">
-        <div class="container pt-5">
-            <div class="row justify-content-center text-center">
-                <div class="col-lg-8">
-                    <h1 class="display-4 fw-bold mb-4">Meet Our Team</h1>
-                    <p class="lead mb-5 text-muted">
-                        Driving innovation and excellence across BioNova Franchising LLC
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
+    <section class="hero-section"></section>
 
-    <!-- Search Bar -->
-    <div class="container mb-5">
-        <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <div class="position-relative">
-                    <i class="fas fa-search search-icon"></i>
-                    <input 
-                        type="text" 
-                        class="form-control form-control-lg ps-5 rounded-pill" 
-                        id="team-search-input" 
-                        placeholder="Search team by name, role, or expertise..." 
-                        aria-label="Search team members"
-                    />
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- Space after hero section -->
+    <div class="mb-5"></div>
 
     <!-- Stats Bar -->
     <div class="container mb-5">
@@ -155,20 +150,20 @@
                     <div class="row text-center">
                         <div class="col-md-4 mb-3 mb-md-0">
                             <div class="stat-item">
-                                <div class="stat-number fw-bold" id="team-count">0</div>
-                                <div class="stat-label text-muted">Team Members</div>
+                                <div class="stat-number fw-bold" id="team-count" style="font-size: 1.5rem">0</div>
+                                <div class="stat-label text-muted" style="font-size: 1.2rem;">Team Members</div>
                             </div>
                         </div>
                         <div class="col-md-4 mb-3 mb-md-0">
                             <div class="stat-item">
-                                <div class="stat-number fw-bold">15+</div>
-                                <div class="stat-label text-muted">Years Experience</div>
+                                <div class="stat-number fw-bold" style="font-size: 1.5rem">15+</div>
+                                <div class="stat-label text-muted" style="font-size: 1.2rem;">Years Experience</div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="stat-item">
-                                <div class="stat-number fw-bold">Bangladesh</div>
-                                <div class="stat-label text-muted">Location</div>
+                                <div class="stat-number fw-bold" style="font-size: 1.4rem">Bangladesh</div>
+                                <div class="stat-label text-muted" style="font-size: 1.2rem;">Location</div>
                             </div>
                         </div>
                     </div>
@@ -180,6 +175,19 @@
     <!-- Main Content -->
     <main class="py-5 bg-white">
         <div class="container">
+            <!-- Search Bar -->
+            <div class="row mb-5">
+                <div class="col-12">
+                    <div class="search-container">
+                        <i class="fas fa-search search-icon"></i>
+                        <input type="text" 
+                               class="form-control search-input" 
+                               id="team-search-input" 
+                               placeholder="Search team members by name, role, or expertise...">
+                    </div>
+                </div>
+            </div>
+
             <!-- Filters -->
             <div class="d-flex flex-wrap justify-content-center gap-2 mb-5" id="team-tags-container">
                 <!-- Tags loaded dynamically -->
@@ -220,7 +228,7 @@
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Your Original Script - Completely Unchanged except image rendering (see below) -->
+    <!-- Script -->
     <script>
         // Scroll effect for header
         window.addEventListener('scroll', () => {
