--- a/article.html
+++ b/article.html
@@ -58,7 +58,7 @@
   <main class="container" style="margin-top: 6rem;">
     <div class="card border-0 shadow-sm mb-5">
       <img id="article-image" class="card-img-top" src="" alt="Article Image" loading="lazy">
-      <div class="card-body d-flex flex-column">
+      <div class="card-body">
         <h1 id="article-title" class="card-title fw-bold mb-3">Loading...</h1>
         <div class="text-muted mb-3" id="article-meta">
           <small><span id="article-author">By Unknown</span> • <span id="article-date">Date Unknown</span></small>
