--- a/article.html
+++ b/article.html
@@ -56,8 +56,8 @@
 
   <!-- Article -->
   <main class="container" style="margin-top: 6rem;">
-    <div class="card border-0 shadow-sm mb-5">
-      <img id="article-image" class="card-img-top" src="" alt="Article Image" loading="lazy" style="max-height: 500px; object-fit: cover;">
+    <div class="card border-0 shadow-sm mb-5" style="max-width: 800px;">
+      <img id="article-image" class="card-img-top" src="" alt="Article Image" loading="lazy">
       <div class="card-body">
         <h1 id="article-title" class="card-title fw-bold mb-3">Loading...</h1>
         <div class="text-muted mb-3" id="article-meta">
