--- a/article.html
+++ b/article.html
@@ -56,7 +56,7 @@
 
   <!-- Article -->
   <main class="container" style="margin-top: 6rem;">
-    <div class="card border-0 shadow-sm mb-5" style="max-width: 800px;">
+    <div class="card border-0 shadow-sm mb-5 mx-auto" style="max-width: 800px;">
       <img id="article-image" class="card-img-top" src="" alt="Article Image" loading="lazy">
       <div class="card-body">
         <h1 id="article-title" class="card-title fw-bold mb-3">Loading...</h1>
